[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "xyz2png"
description = "Convert.xyz file into.png file"
readme = "README.md"
keywords = [
  "image",
  "png",
  "rpg-tkool",
  "xyz",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [ "pillow>=11.1,<12" ]

urls.Repository = "https://github.com/eggplants/xyz2png"
scripts.xyz2png = "xyz2png.main:main"

[dependency-groups]
dev = [
  "mypy>=1.9,<2",
  "pre-commit>=3.7,<5",
  "ruff>=0.5,<0.15",
  "taskipy>=1.10.3,<2",
]
docs = [ "pdoc" ]

[tool.hatch.version]
# tool.hatch.version.source is not listed in official schema.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "xyz2png" ]

[tool.hatch.build.targets.wheel]
include = [ "xyz2png" ]

[tool.uv]
default-groups = [
  "dev",
  "docs",
]

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "ALL",
]
lint.pydocstyle.convention = "google"

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[tool.taskipy.tasks]
lint = "pre-commit run -a"
profile = "python -m cProfile"
gendoc = "pdoc xyz2png -o ./docs --docformat google"
